Better implementation of CommandLineHistory + test